name:                hackasm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hackasm#readme
license:             BSD3
license-file:        LICENSE
author:              Jonah Hooper
maintainer:          jonah.graham.hooper@gmail.com
copyright:           Jonah Hooper
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hackasm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , binary
                       , attoparsec
                       , text
                       , data-default
                       , bytestring
                       , mtl
                       , containers
                       , docopt
                       , split
